# aoc-solutions

./: README.md  pyproject.toml
2020/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py
2021/: 01part1.py  01part2.py  02part1.py  02part2.py  03.py  04.py  05.py  06.py  06test.in  07.py  08part1.py  08part2.py  09.py  10.py  11.py  12.py  13.py  14part1.py  14part2.py  15.py  16.py
2022/: 03part1.py  04.py  06.py  09.py  1.py  10.py  11part1.py  11part2.py  11part2naive.py  12.py  13.py  14.py  15part1.py  15part2.py  15part2fast.py  17part1.py  18part1.py  18part2.py  19.py  2.py  20part1.py  20part2.py  21part1.py  21part2.py  22part1.py  22part2.py  23.py  24.py  25.py  3part2.py  5.py  7.py  8.py
2022/01/: part1.py  part2.py
2022/02/: part1.py  part2.py
2022/03/: part1.py  part2.py
2022/04/: part1.py  part2.py
2022/05/: part1.py  part2.py
2022/06/: part1.py  part2.py
2022/07/: part1.py  part2.py
2022/08/: part1.py  part2.py
2022/09/: common.py  part1.py  part2.py
2022/10/: part1.py  part2.py
2022/11/: part1.py  part2.py
2022/12/: part1.py  part2.py
2022/13/: both.py  test_both.out
2022/14/: part1.py  part2.py
2022/15/: part1.py  part2.py
2022/16/: part1.py  part2.py
2022/17/: part1.py  part2.py
2022/18/: part1.py  part2.py
2022/20/: part1.py  part2.py
2022/21/: part1.py  part2.py
2022/22/: part1.py  part2.py
2022/23/: both.py  test_both.out
2022/24/: both.py  test_both.out
2022/25/: part1.py
2022/tests/: test_2022.py
lib/: __init__.py  vec2d.py
tests/: test_2022.py
(+1 files in other folders)
