[tool.poetry]
name = "aoc-solutions"
version = "0.1.0"
description = "My solutions to AoC tasks"
authors = ["Lukáš Folwarczný <lfolwarczny@gmail.com>"]
readme = "README.md"
packages = [ {include = "2022"}, { include = "lib" } ]

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.1.14"

[tool.ruff]
line-length = 79
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
